fix: remove overflow-y from combinedSection to eliminate scroll arrows

--- a/src/app.scss
+++ b/src/app.scss
@@ -24,11 +24,7 @@
         }
 
         .combinedSection {
-            overflow-y: auto;
-            scrollbar-width: none;
-            &::-webkit-scrollbar {
-                display: none;
-            }
+            height: auto;
             > * {
                 width: 100%;
                 height: auto;
